--- a/app/src/main/res/raw/help.html
+++ b/app/src/main/res/raw/help.html
@@ -1,16 +1,15 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <style type="text/css">
-        img {
-            width: 24;
-            height: 24;
-        }
-    </style>
+    <title>Help</title>
+    <meta charset="UTF-8">
 </head>
 <body>
 <h2>General</h2>
 <p>
     <i>Dodeca</i> is port of similar program for Windows.
+    If you found a bug or if you want to suggest some improvements ― go to
+    <i>Settings/Feedback and support</i> and email it to me.
 </p>
 <h3><i>ddu</i> file</h3>
 <p>
@@ -38,22 +37,22 @@
     </tr>
     <tr>
         <td><img src="file:///android_res/drawable/icon_open_file.png" alt="open-ddu-button"></td>
-        <td><p>Open Dodeca internal folder and let you choose ddu file by name.</p></td>
+        <td><p>Open <i>Dodeca</i> internal folder and let you choose <i>ddu</i> file by name.</p></td>
     </tr>
     <tr>
         <td><img src="file:///android_res/drawable/icon_save.png" alt="save-ddu-button"></td>
         <td><p>
             Save current position, scale and trace (on/off).
-            Switch off "Autocenter always" in settings in order to get saved position.
+            Switch off <i>Settings/Autocenter always</i> in order to get saved position.
         </p></td>
     </tr>
     <tr>
-        <td><img src="file:///android_res/drawable/icon_play.png" alt="play-button"></td>
-        <td><p>Start/stop playing ddu file.</p></td>
+        <td><img src="file:///android_res/drawable/icon_play.png" alt="play-button" width="24" height="24"></td>
+        <td><p>Start/stop playing <i>ddu</i> file.</p></td>
     </tr>
     <tr>
         <td><img src="file:///android_res/drawable/icon_next_step.png" alt="next-step-button"></td>
-        <td><p>Stop playing ddu file and perform one update.</p></td>
+        <td><p>Stop playing <i>ddu</i> file and perform one update.</p></td>
     </tr>
     <tr>
         <td><img src="file:///android_res/drawable/icon_trace.png" alt="trace-button"></td>
@@ -65,7 +64,7 @@
     </tr>
     <tr>
         <td><img src="file:///android_res/drawable/icon_settings.png" alt="settings-button"></td>
-        <td><p>Open dodeca settings.</p></td>
+        <td><p>Open <i>Dodeca</i> settings.</p></td>
     </tr>
 </table>
 <!--<h2>Settings</h2>-->
