help in assets; bottom bar first

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -51,7 +51,7 @@
         </table>
         <h2>Общее</h2>
         <p>
-            <i>Dodeca</i> ― порт одноимённой программы для Windows.
+            <i>Dodeca</i> ― Android версия одноимённой видеоарт-программы для Windows.
             Если вы обнаружили ошибку или у вас есть предложения по улучшению ― зайдите в
             <i>Настройки/Обратная связь и поддержка</i> и опишите это в письме.
         </p>
@@ -64,9 +64,9 @@
         </p>
         <h3>Движения</h3>
         <p>
-            Вы можете передвигать <i>ddu</i> перетаскиванием.
-            Вы можете масштабировать <i>ddu</i> двумя пальцами.
-            Если включена настройка <i>Перерисока следа</i>, то при движении холст будет очищаться.
+            Вы можете передвигать <i>изображение ddu</i> перетаскиванием.
+            Вы можете масштабировать <i>изображение ddu</i> двумя пальцами.
+            Если включена настройка <i>Перерисовка следа</i>, то при движении холст будет очищаться.
         </p>
         <!--<h2>Settings</h2>-->
         <!--<p></p>-->
