--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -51,7 +51,7 @@
         </table>
         <h2>General</h2>
         <p>
-            <i>Dodeca</i> is port of similar program for Windows.
+            <i>Dodeca</i> is Android version of similar video art program for Windows.
             If you found a bug or if you want to suggest some improvements ― go to
             <i>Settings/Feedback and support</i> and email it to me.
         </p>
@@ -64,8 +64,8 @@
         </p>
         <h3>Motion</h3>
         <p>
-            You can change position of <i>ddu</i> by dragging it.
-            You can zoom/scale <i>ddu</i> with 2 fingers.
+            You can change position of <i>ddu image</i> by dragging it.
+            You can zoom/scale <i>ddu image</i> with 2 fingers (pinch to zoom).
             Note, that if <i>Settings/Redraw trace</i> is on, motion and scaling clear canvas.
         </p>
         <!--<h2>Settings</h2>-->
