--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td><img src="icons/icon_open_file.png" alt="open-ddu-button"></td>
-                <td><p>Открывает внутреннюю папку <i>Dodeca</i> и позволяет выбрать файл <i>ddu</i> по имени.</p></td>
+                <td><p>Открывает внутреннюю папку <i>Dodeca Look</i> и позволяет выбрать файл <i>ddu</i> по имени.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/icon_save.png" alt="save-ddu-button"></td>
@@ -51,16 +51,16 @@
         </table>
         <h2>Общее</h2>
         <p>
-            <i>Dodeca</i> ― Android версия одноимённой видеоарт-программы для Windows.
+            <i>Dodeca Look</i> ― Android версия одноимённой видеоарт-программы для Windows.
             Если вы обнаружили ошибку или у вас есть предложения по улучшению ― зайдите в
             <i>Настройки/Обратная связь и поддержка</i> и опишите это в письме.
         </p>
         <h3>Файл <i>ddu</i></h3>
         <p>
-            <i>Dodeca</i> позволяет просматривать и изменять файлы <i>ddu</i>.
-            Вы можете открыть файл <i>ddu</i>, поставленный вместе с <i>Dodeca</i> с помощью кнопки на нижней панели.
-            Если у вас уже есть файл <i>ddu</i>, найдите его в любом файловом менеджере и выберите <i>Открыть с помощью/Dodeca</i>.
-            <i>Dodeca</i> автоматически импортирует это файл <i>ddu</i> во внутреннюю папку.
+            <i>Dodeca Look</i> позволяет просматривать и изменять файлы <i>ddu</i>.
+            Вы можете открыть файл <i>ddu</i>, поставленный вместе с <i>Dodeca Look</i> с помощью кнопки на нижней панели.
+            Если у вас уже есть файл <i>ddu</i>, найдите его в любом файловом менеджере и выберите <i>Открыть с помощью/Dodeca Look</i>.
+            <i>Dodeca Look</i> автоматически импортирует это файл <i>ddu</i> во внутреннюю папку.
         </p>
         <h3>Движения</h3>
         <p>
