--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td><img src="icons/icon_open_file.png" alt="open-ddu-button"></td>
-                <td><p>Open <i>Dodeca</i> internal folder and let you choose <i>ddu</i> file by name.</p></td>
+                <td><p>Open <i>Dodeca Look</i> internal folder and let you choose <i>ddu</i> file by name.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/icon_save.png" alt="save-ddu-button"></td>
@@ -46,21 +46,21 @@
             </tr>
             <tr>
                 <td><img src="icons/icon_settings.png" alt="settings-button"></td>
-                <td><p>Open <i>Dodeca</i> settings.</p></td>
+                <td><p>Open <i>Dodeca Look</i> settings.</p></td>
             </tr>
         </table>
         <h2>General</h2>
         <p>
-            <i>Dodeca</i> is Android version of similar video art program for Windows.
+            <i>Dodeca Look</i> is Android version of similar video art program for Windows.
             If you found a bug or if you want to suggest some improvements ― go to
             <i>Settings/Feedback and support</i> and email it to me.
         </p>
         <h3><i>ddu</i> file</h3>
         <p>
-            <i>Dodeca</i> allows to view and modify <i>ddu</i> files.
-            You can open <i>ddu</i> shipped with <i>Dodeca</i> via button on bottom bar.
-            If you already have a <i>ddu</i>, locate it with file manager and choose to open with <i>Dodeca</i>.
-            <i>Dodeca</i> will import this <i>ddu</i> to internal folder.
+            <i>Dodeca Look</i> allows to view and modify <i>ddu</i> files.
+            You can open <i>ddu</i> shipped with <i>Dodeca Look</i> via button on bottom bar.
+            If you already have a <i>ddu</i>, locate it with file manager and choose to open with <i>Dodeca Look</i>.
+            <i>Dodeca Look</i> will import this <i>ddu</i> to internal folder.
         </p>
         <h3>Motion</h3>
         <p>
