all drawables -> vector; upd help

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -14,38 +14,50 @@
         </ul>
         <table>
             <tr>
-                <td><img src="icons/ic_help.png" alt="help-button"></td>
+                <td><img src="icons/ic_outline.svg" alt="outline-button"></td>
+                <td><p>Показывать абрис.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
+                <td><p>Включает/выключает след. Если след был включен ― очищает холст.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_circle.svg" alt="circle-shape"></td>
+                <td><p>Выбор одной из следующих форм вместо окружности: квадрат, крест, вертикальная черта, горизонтальная черта.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
+                <td><p>Очищает холст.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
+                <td><p>Автоцентровка</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_help.svg" alt="help-button"></td>
                 <td><p>Показывает данную справку.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_open_file.png" alt="open-ddu-button"></td>
+                <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
                 <td><p>Открывает внутреннюю папку <i>Dodeca Look</i> и позволяет выбрать файл <i>ddu</i> по имени.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_save.png" alt="save-ddu-button"></td>
+                <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
                     Сохраняет в файл <i>ddu</i> текущую позицию, масштаб и след.
                     Выключите настройку <i>Всегда проводить автоцентровку</i>, чтобы загружать сохранённую позцию.
                 </p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_play.png" alt="play-button"></td>
+                <td><img src="icons/ic_play.svg" alt="play-button"></td>
                 <td><p>Запускает/приостанавливает проигрывание файла <i>ddu</i>.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_next_step.png" alt="next-step-button"></td>
+                <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
                 <td><p>Останавливает проигрывание файла <i>ddu</i> и совершает 1 шаг.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_trace.png" alt="trace-button"></td>
-                <td><p>Включает/выключает след. Если след был включен ― очищает холст.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/icon_erase.png" alt="clear-button"></td>
-                <td><p>Очищает холст.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/icon_settings.png" alt="settings-button"></td>
+                <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
                 <td><p>Открывает настройки.</p></td>
             </tr>
         </table>
