--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -14,38 +14,50 @@
         </ul>
         <table>
             <tr>
-                <td><img src="icons/ic_help.png" alt="help-button"></td>
+                <td><img src="icons/ic_outline.svg" alt="outline-button"></td>
+                <td><p>Show outline.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
+                <td><p>Toggle trace. Clear canvas if trace is on.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_circle.svg" alt="circle-shape"></td>
+                <td><p>Choose one of the following shapes to draw instead of circle: square, cross, vertical bar, horizontal bar.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
+                <td><p>Clear canvas.</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
+                <td><p>Autocenter</p></td>
+            </tr>
+            <tr>
+                <td><img src="icons/ic_help.svg" alt="help-button"></td>
                 <td><p>Show this help.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_open_file.png" alt="open-ddu-button"></td>
+                <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
                 <td><p>Open <i>Dodeca Look</i> internal folder and let you choose <i>ddu</i> file by name.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_save.png" alt="save-ddu-button"></td>
+                <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
                     Save current position, scale and trace (on/off).
                     Switch off <i>Settings/Autocenter always</i> in order to get saved position.
                 </p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_play.png" alt="play-button">
+                <td><img src="icons/ic_play.svg" alt="play-button">
                 <td><p>Start/stop playing <i>ddu</i> file.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_next_step.png" alt="next-step-button"></td>
+                <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
                 <td><p>Stop playing <i>ddu</i> file and perform one update.</p></td>
             </tr>
             <tr>
-                <td><img src="icons/icon_trace.png" alt="trace-button"></td>
-                <td><p>Toggle trace. Clear canvas if trace is on.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/icon_erase.png" alt="clear-button"></td>
-                <td><p>Clear canvas.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/icon_settings.png" alt="settings-button"></td>
+                <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
                 <td><p>Open <i>Dodeca Look</i> settings.</p></td>
             </tr>
         </table>
