trace and outline -- toggle bg + pause/play images for play_button

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -44,12 +44,15 @@
             <tr>
                 <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
-                    Сохраняет в файл <i>ddu</i> текущую позицию, масштаб и след.
+                    Сохраняет в файл <i>ddu</i> текущую позицию, масштаб, форму (окружность, квадрат и т.д.), абрис и след.
                     Выключите настройку <i>Всегда проводить автоцентровку</i>, чтобы загружать сохранённую позцию.
                 </p></td>
             </tr>
             <tr>
-                <td><img src="icons/ic_play.svg" alt="play-button"></td>
+                <td>
+                    <img src="icons/ic_play.svg" alt="play-button">
+                    <img src="icons/ic_pause.svg" alt="pause-button">
+                </td>
                 <td><p>Запускает/приостанавливает проигрывание файла <i>ddu</i>.</p></td>
             </tr>
             <tr>
