--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -44,12 +44,15 @@
             <tr>
                 <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
-                    Save current position, scale and trace (on/off).
+                    Save current position, scale, shape, outline (on/off) and trace (on/off).
                     Switch off <i>Settings/Autocenter always</i> in order to get saved position.
                 </p></td>
             </tr>
             <tr>
-                <td><img src="icons/ic_play.svg" alt="play-button">
+                <td>
+                    <img src="icons/ic_play.svg" alt="play-button">
+                    <img src="icons/ic_pause.svg" alt="pause-button">
+                </td>
                 <td><p>Start/stop playing <i>ddu</i> file.</p></td>
             </tr>
             <tr>
