Dodeca {Look -> Meditation}; removed ; test!

--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -39,13 +39,12 @@
             </tr>
             <tr>
                 <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
-                <td><p>Open <i>Dodeca Look</i> internal folder and let you choose <i>ddu</i> file by name.</p></td>
+                <td><p>Open <i>Dodeca Meditation</i> art collection and let you choose a <i>ddu</i>-picture.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
                     Save current position, scale, shape, outline (on/off) and trace (on/off).
-                    Switch off <i>Settings/Autocenter always</i> in order to get saved position.
                 </p></td>
             </tr>
             <tr>
@@ -53,34 +52,35 @@
                     <img src="icons/ic_play.svg" alt="play-button">
                     <img src="icons/ic_pause.svg" alt="pause-button">
                 </td>
-                <td><p>Start/stop playing <i>ddu</i> file.</p></td>
+                <td><p>Start/stop playing <i>ddu</i>-picture.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
-                <td><p>Stop playing <i>ddu</i> file and perform one update.</p></td>
+                <td><p>Stop playing <i>ddu</i>-picture and perform one update.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
-                <td><p>Open <i>Dodeca Look</i> settings.</p></td>
+                <td><p>Open <i>Dodeca Meditation</i> settings.</p></td>
             </tr>
         </table>
         <h2>General</h2>
         <p>
-            <i>Dodeca Look</i> is Android version of similar video art program for Windows.
+            <i>Dodeca Meditation</i> is Android version of similar video art program for Windows.
             If you found a bug or if you want to suggest some improvements ― go to
             <i>Settings/Feedback and support</i> and email it to me.
         </p>
-        <h3><i>ddu</i> file</h3>
+        <h3><i>ddu</i>-picture</h3>
         <p>
-            <i>Dodeca Look</i> allows to view and modify <i>ddu</i> files.
-            You can open <i>ddu</i> shipped with <i>Dodeca Look</i> via button on bottom bar.
-            If you already have a <i>ddu</i>, locate it with file manager and choose to open with <i>Dodeca Look</i>.
-            <i>Dodeca Look</i> will import this <i>ddu</i> to internal folder.
+            <i>Dodeca Meditation</i> allows to view and modify <i>ddu</i> files.
+            You can open <i>ddu</i>-picture from <i>Dodeca Meditation</i> art collection via button on bottom bar.
+            If you already have a file of <i>ddu</i>-picture, locate it with file manager and choose to open with <i>Dodeca Meditation</i>.
+            <i>Dodeca Meditation</i> will import file of this <i>ddu</i>-picture to internal folder.
+            File of <i>ddu</i>-picture (with extension .ddu) contains initial state and development rules of picture.
         </p>
         <h3>Motion</h3>
         <p>
-            You can change position of <i>ddu image</i> by dragging it.
-            You can zoom/scale <i>ddu image</i> with 2 fingers (pinch to zoom).
+            You can change position of <i>ddu</i>-picture by dragging it.
+            You can zoom/scale <i>ddu</i>-picture with 2 fingers (pinch to zoom).
             Note, that if <i>Settings/Redraw trace</i> is on, motion and scaling clear canvas.
         </p>
         <!--<h2>Settings</h2>-->
