--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -45,7 +45,6 @@
                 <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
                     Сохраняет в файл <i>ddu</i>-картины текущую позицию, масштаб, форму (окружность, квадрат и т.д.), абрис и след.
-                    Выключите настройку <i>Всегда проводить автоцентровку</i>, чтобы загружать сохранённую позцию.
                 </p></td>
             </tr>
             <tr>
@@ -66,7 +65,7 @@
         </table>
         <h2>Общее</h2>
         <p>
-            <i>Додека Медитация</i> ― Android версия видеоарт-программы для Windows.
+            <i>Додека Медитация</i> ― Android версия видеоарт-программы <i>DodecaLook</i> для Windows.
             Если вы обнаружили ошибку или у вас есть предложения по улучшению ― зайдите в
             <i>Настройки/Обратная связь и поддержка</i> и опишите это в письме.
         </p>
@@ -80,8 +79,8 @@
         </p>
         <h3>Движения</h3>
         <p>
-            Вы можете передвигать <i>ddu</i>-картину перетаскиванием.
-            Вы можете масштабировать <i>ddu</i>-картину двумя пальцами.
+            Вы можете передвигать <i>ddu</i>-картину перетаскиванием.<br>
+            Вы можете масштабировать <i>ddu</i>-картину двумя пальцами.<br>
             Если включена настройка <i>Перерисовка следа</i>, то при движении холст будет очищаться.
         </p>
         <!--<h2>Settings</h2>-->
