--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -65,22 +65,22 @@
         </table>
         <h2>General</h2>
         <p>
-            <i>Dodeca Meditation</i> is Android version of similar video art program for Windows.
+            <i>Dodeca Meditation</i> is Android version of video art program <i>DodecaLook</i> for Windows.
             If you found a bug or if you want to suggest some improvements ― go to
             <i>Settings/Feedback and support</i> and email it to me.
         </p>
         <h3><i>ddu</i>-picture</h3>
         <p>
-            <i>Dodeca Meditation</i> allows to view and modify <i>ddu</i> files.
-            You can open <i>ddu</i>-picture from <i>Dodeca Meditation</i> art collection via button on bottom bar.
+            <i>Dodeca Meditation</i> allows to view and modify <i>ddu</i>-pictures.
+            You can open a <i>ddu</i>-picture from <i>Dodeca Meditation</i> art collection via button on bottom bar.
             If you already have a file of <i>ddu</i>-picture, locate it with file manager and choose to open with <i>Dodeca Meditation</i>.
-            <i>Dodeca Meditation</i> will import file of this <i>ddu</i>-picture to internal folder.
-            File of <i>ddu</i>-picture (with extension .ddu) contains initial state and development rules of picture.
+            <i>Dodeca Meditation</i> will import file of the <i>ddu</i>-picture to internal folder.
+            File of <i>ddu</i>-picture (with extension .ddu) contains initial state and development rules of the picture.
         </p>
         <h3>Motion</h3>
         <p>
-            You can change position of <i>ddu</i>-picture by dragging it.
-            You can zoom/scale <i>ddu</i>-picture with 2 fingers (pinch to zoom).
+            You can change position of <i>ddu</i>-picture by dragging it.<br>
+            You can zoom/scale <i>ddu</i>-picture with 2 fingers (pinch to zoom).<br>
             Note, that if <i>Settings/Redraw trace</i> is on, motion and scaling clear canvas.
         </p>
         <!--<h2>Settings</h2>-->
