translations done; tuning recyclerview height

--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -14,8 +14,8 @@
         </ul>
         <table>
             <tr>
-                <td><img src="icons/ic_outline.svg" alt="outline-button"></td>
-                <td><p>Show outline.</p></td>
+                <td><img src="icons/ic_choose_color.svg" alt="edit-circles-button"></td>
+                <td><p>Circle editor. Allows to change fill color and border color of selected circles.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
