--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -14,8 +14,8 @@
         </ul>
         <table>
             <tr>
-                <td><img src="icons/ic_outline.svg" alt="outline-button"></td>
-                <td><p>Показывать абрис.</p></td>
+                <td><img src="icons/ic_choose_color.svg" alt="edit-circles-button"></td>
+                <td><p>Редактор окружностей. Позволяет поменять заливку и цвет границы выбранных окружностей.</p></td>
             </tr>
             <tr>
                 <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
