adding import/export

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -44,7 +44,7 @@
             <tr>
                 <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
-                    Сохраняет в файл <i>ddu</i>-картины текущую позицию, масштаб, форму (окружность, квадрат и т.д.), абрис и след.
+                    Сохраняет в файл <i>ddu</i>-картины текущую позицию, масштаб, форму (окружность, квадрат и т.д.), цвета и след.
                 </p></td>
             </tr>
             <tr>
