--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -44,7 +44,7 @@
             <tr>
                 <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
                 <td><p>
-                    Save current position, scale, shape, outline (on/off) and trace (on/off).
+                    Save current position, scale, shape, colors and trace (on/off).
                 </p></td>
             </tr>
             <tr>
