DodecaLook compatible export

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -1,89 +1,141 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Справка</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <h2>Нижняя панель</h2>
-        <ul>
-            <li>Нажмите в области над нижней панелью чтобы скрыть/показать её.</li>
-            <li>Длинное нажатие на кнопке нижней панели покажет её краткое описание.</li>
-            <li>Нижняя панеля скрывается после 30 секунд неактивности.</li>
-        </ul>
-        <table>
-            <tr>
-                <td><img src="icons/ic_choose_color.svg" alt="edit-circles-button"></td>
-                <td><p>Редактор окружностей. Позволяет поменять заливку и цвет границы выбранных окружностей.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
-                <td><p>Включает/выключает след. Если след был включен ― очищает холст.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_circle.svg" alt="circle-shape"></td>
-                <td><p>Выбор одной из следующих форм вместо окружности: квадрат, крест, вертикальная черта, горизонтальная черта.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
-                <td><p>Очищает холст.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
-                <td><p>Автоцентровка</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_help.svg" alt="help-button"></td>
-                <td><p>Показывает данную справку.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
-                <td><p>Открывает коллекцию картин <i>Додека Медитация</i> и позволяет выбрать <i>ddu</i>-картину.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
-                <td><p>
-                    Сохраняет в файл <i>ddu</i>-картины текущую позицию, масштаб, форму (окружность, квадрат и т.д.), цвета и след.
-                </p></td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="icons/ic_play.svg" alt="play-button">
-                    <img src="icons/ic_pause.svg" alt="pause-button">
-                </td>
-                <td><p>Запускает/приостанавливает проигрывание <i>ddu</i>-картины.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
-                <td><p>Останавливает проигрывание <i>ddu</i>-картины и совершает 1 шаг.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
-                <td><p>Открывает настройки.</p></td>
-            </tr>
-        </table>
-        <h2>Общее</h2>
+<head>
+    <title>Справка</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<h2>Нижняя панель</h2>
+<div>
+    <ul>
+        <li>Нажмите в области над нижней панелью чтобы скрыть/показать её.</li>
+        <li>Длинное нажатие на кнопке нижней панели покажет её краткое описание.</li>
+        <li>Нижняя панеля скрывается после 30 секунд неактивности.</li>
+    </ul>
+    <table>
+        <tr>
+            <td><img src="icons/ic_choose_color.svg" alt="edit-circles-button"></td>
+            <td><p>Редактор окружностей. Позволяет поменять заливку и цвет границы выбранных окружностей.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
+            <td><p>Включает/выключает след. Если след был включен ― очищает холст.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_circle.svg" alt="circle-shape"></td>
+            <td><p>Выбор одной из следующих форм вместо окружности: квадрат, крест, вертикальная черта, горизонтальная черта.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
+            <td><p>Очищает холст.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
+            <td><p>Автоцентровка</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_help.svg" alt="help-button"></td>
+            <td><p>Показывает данную справку.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
+            <td><p>Открывает коллекцию картин <i>Додека Медитация</i> и позволяет выбрать <i>ddu</i>-картину.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
+            <td><p>
+                Сохраняет в файл <i>ddu</i>-картины текущую позицию, масштаб, форму (окружность, квадрат и т.д.), цвета и след.
+            </p></td>
+        </tr>
+        <tr>
+            <td>
+                <img src="icons/ic_play.svg" alt="play-button">
+                <img src="icons/ic_pause.svg" alt="pause-button">
+            </td>
+            <td><p>Запускает/приостанавливает проигрывание <i>ddu</i>-картины.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
+            <td><p>Останавливает проигрывание <i>ddu</i>-картины и совершает 1 шаг.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
+            <td><p>Открывает настройки.</p></td>
+        </tr>
+    </table>
+</div>
+<h2>Выбирая <i>ddu</i>-картину</h2>
+<div>
+    <p>
+        При первом открытии колекции <i>ddu</i>-картин вы увидите загрузающиеся предпросмотры ―
+        они автогенерируются на основе имеющихся файлов (<b>не</b> скачиваются из Интернета). Вы можете изменить
+        параметры предпросмотров в настройках. При последующих открытиях коллекции загружаться будут только
+        изменённые вами картины.
+    </p>
+    <h3>Верхняя панель</h3>
+    <table>
+        <tr>
+            <td><img src="icons/ic_arrow_upward.svg"></td>
+            <td><p>Переход в родительскую папку.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_import.svg"></td>
+            <td><p>Импорт <i>ddu</i>-картин из файловой системы.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_export.svg"></td>
+            <td><p>Экспорт текущей папки в файловую систему
+                (при условии, что у вас Android версии не ниже 5.0 Lollipop).</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_add_folder.svg"></td>
+            <td><p>Импорт папки с <i>ddu</i>-картинами из
+                файловой системы (при условии, что у вас Android версии не ниже 5.0 Lollipop).</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_delete.svg"></td>
+            <td><p>Удаление содержимого текущей папки.</p></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><p>Скрыть/показать папки.</p></td>
+        </tr>
+    </table>
+    <h3>Контекстное меню</h3>
+    <div>
         <p>
-            <i>Додека Медитация</i> ― Android версия видеоарт-программы <i>DodecaLook</i> для Windows.
-            Если вы обнаружили ошибку или у вас есть предложения по улучшению ― зайдите в
-            <i>Настройки/Обратная связь и поддержка</i> и опишите это в письме.
+            Контекстное меню появляется при долгом нажатии на <i>ddu</i>-картину/папку.
         </p>
-        <h3><i>ddu</i>-картина</h3>
-        <p>
-            <i>Додека Медитация</i> позволяет просматривать и изменять <i>ddu</i>-картины.
-            Вы можете открыть <i>ddu</i>-картину, из коллекции <i>Додека Медитация</i> с помощью кнопки на нижней панели.
-            Если у вас уже есть файл <i>ddu</i>-картины, найдите его в любом файловом менеджере и выберите <i>Открыть с помощью/Додека Медитация</i>.
-            <i>Додека Медитация</i> автоматически импортирует файл этой <i>ddu</i>-картины во внутреннюю папку.
-            Файл <i>ddu</i>-картин (с расширением .ddu) содержит исходные данные картины и правила её развития.
-        </p>
-        <h3>Движения</h3>
-        <p>
-            Вы можете передвигать <i>ddu</i>-картину перетаскиванием.<br>
-            Вы можете масштабировать <i>ddu</i>-картину двумя пальцами.<br>
-            Если включена настройка <i>Перерисовка следа</i>, то при движении холст будет очищаться.
-        </p>
-        <!--<h2>Settings</h2>-->
-        <!--<p></p>-->
-    </body>
+        <h4>Для <i>ddu</i>-картины</h4>
+        <p>Вы можете переименовать, удалить, восстановить исходную версию, создать копию или экспортировать.</p>
+        <h4>Для папки</h4>
+        <p>Вы можете удалить или экспортировать (при условии, что у вас Android версии не ниже 5.0 Lollipop).</p>
+    </div>
+</div>
+<h2>Общее</h2>
+<div>
+    <p>
+        <i>Додека Медитация</i> ― Android версия видеоарт-программы <i>DodecaLook</i> для Windows.
+        Если вы обнаружили ошибку или у вас есть предложения по улучшению ― зайдите в
+        <i>Настройки/Обратная связь и поддержка</i> и опишите это в письме.
+    </p>
+    <h3><i>ddu</i>-картина</h3>
+    <p>
+        <i>Додека Медитация</i> позволяет просматривать и изменять <i>ddu</i>-картины.
+        Вы можете открыть <i>ddu</i>-картину, из коллекции <i>Додека Медитация</i> с помощью кнопки на нижней панели.
+        Если у вас уже есть файл <i>ddu</i>-картины, найдите его в любом файловом менеджере и выберите <i>Открыть с помощью/Додека Медитация</i>.
+        <i>Додека Медитация</i> автоматически импортирует файл этой <i>ddu</i>-картины во внутреннюю папку.
+        Файл <i>ddu</i>-картин (с расширением .ddu) содержит исходные данные картины и правила её развития.
+    </p>
+    <h3>Движения</h3>
+    <p>
+        Вы можете передвигать <i>ddu</i>-картину перетаскиванием.<br>
+        Вы можете масштабировать <i>ddu</i>-картину двумя пальцами.<br>
+        Если включена настройка <i>Перерисовка следа</i>, то при движении холст будет очищаться.
+    </p>
+</div>
+<!--<h2>Settings</h2>-->
+<!--<p></p>-->
+</body>
 </html>
