--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -1,89 +1,139 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Help</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <h2>Bottom bar</h2>
-        <ul>
-            <li>Tap on area above bottom bar to toggle it.</li>
-            <li>Long tap on button to see brief description.</li>
-            <li>Bottom bar hides after 30 seconds of inactivity.</li>
-        </ul>
-        <table>
-            <tr>
-                <td><img src="icons/ic_choose_color.svg" alt="edit-circles-button"></td>
-                <td><p>Circle editor. Allows to change fill color and border color of selected circles.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
-                <td><p>Toggle trace. Clear canvas if trace is on.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_circle.svg" alt="circle-shape"></td>
-                <td><p>Choose one of the following shapes to draw instead of circle: square, cross, vertical bar, horizontal bar.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
-                <td><p>Clear canvas.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
-                <td><p>Autocenter</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_help.svg" alt="help-button"></td>
-                <td><p>Show this help.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
-                <td><p>Open <i>Dodeca Meditation</i> art collection and let you choose a <i>ddu</i>-picture.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
-                <td><p>
-                    Save current position, scale, shape, colors and trace (on/off).
-                </p></td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="icons/ic_play.svg" alt="play-button">
-                    <img src="icons/ic_pause.svg" alt="pause-button">
-                </td>
-                <td><p>Start/stop playing <i>ddu</i>-picture.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
-                <td><p>Stop playing <i>ddu</i>-picture and perform one update.</p></td>
-            </tr>
-            <tr>
-                <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
-                <td><p>Open <i>Dodeca Meditation</i> settings.</p></td>
-            </tr>
-        </table>
-        <h2>General</h2>
-        <p>
-            <i>Dodeca Meditation</i> is Android version of video art program <i>DodecaLook</i> for Windows.
-            If you found a bug or if you want to suggest some improvements ― go to
-            <i>Settings/Feedback and support</i> and email it to me.
-        </p>
-        <h3><i>ddu</i>-picture</h3>
-        <p>
-            <i>Dodeca Meditation</i> allows to view and modify <i>ddu</i>-pictures.
-            You can open a <i>ddu</i>-picture from <i>Dodeca Meditation</i> art collection via button on bottom bar.
-            If you already have a file of <i>ddu</i>-picture, locate it with file manager and choose to open with <i>Dodeca Meditation</i>.
-            <i>Dodeca Meditation</i> will import file of the <i>ddu</i>-picture to internal folder.
-            File of <i>ddu</i>-picture (with extension .ddu) contains initial state and development rules of the picture.
-        </p>
-        <h3>Motion</h3>
-        <p>
-            You can change position of <i>ddu</i>-picture by dragging it.<br>
-            You can zoom/scale <i>ddu</i>-picture with 2 fingers (pinch to zoom).<br>
-            Note, that if <i>Settings/Redraw trace</i> is on, motion and scaling clear canvas.
-        </p>
-        <!--<h2>Settings</h2>-->
-        <!--<p></p>-->
-    </body>
+<head>
+    <title>Help</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<h2>Bottom bar</h2>
+<div>
+    <ul>
+        <li>Tap on area above bottom bar to toggle it.</li>
+        <li>Long tap on button to see brief description.</li>
+        <li>Bottom bar hides after 30 seconds of inactivity.</li>
+    </ul>
+    <table>
+        <tr>
+            <td><img src="icons/ic_choose_color.svg" alt="edit-circles-button"></td>
+            <td><p>Circle editor. Allows to change fill color and border color of selected circles.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_trace.svg" alt="trace-button"></td>
+            <td><p>Toggle trace. Clear canvas if trace is on.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_circle.svg" alt="circle-shape"></td>
+            <td><p>Choose one of the following shapes to draw instead of circle: square, cross, vertical bar, horizontal bar.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
+            <td><p>Clear canvas.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
+            <td><p>Autocenter</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_help.svg" alt="help-button"></td>
+            <td><p>Show this help.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_open_file.svg" alt="open-ddu-button"></td>
+            <td><p>Open <i>Dodeca Meditation</i> art collection and let you choose a <i>ddu</i>-picture.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_save_file.svg" alt="save-ddu-button"></td>
+            <td><p>
+                Save current position, scale, shape, colors and trace (on/off).
+            </p></td>
+        </tr>
+        <tr>
+            <td>
+                <img src="icons/ic_play.svg" alt="play-button">
+                <img src="icons/ic_pause.svg" alt="pause-button">
+            </td>
+            <td><p>Start/stop playing <i>ddu</i>-picture.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_next_step.svg" alt="next-step-button"></td>
+            <td><p>Stop playing <i>ddu</i>-picture and perform one update.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_settings.svg" alt="settings-button"></td>
+            <td><p>Open <i>Dodeca Meditation</i> settings.</p></td>
+        </tr>
+    </table>
+</div>
+<h2>Choosing <i>ddu</i>-picture</h2>
+<div>
+    <p>
+        When you first open the <i>ddu</i>-collection you will see loading previews ―
+        they are generating from existing files (<b>not</b> downloading from the internet).
+        You can change preview parameters from <i>Settings</i>. On subsequent opening of the collection only changed
+        <i>ddu</i>-pictures will be loading.
+    </p>
+    <h3>Top bar</h3>
+    <table>
+        <tr>
+            <td><img src="icons/ic_arrow_upward.svg"></td>
+            <td><p>Go to parent folder.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_import.svg"></td>
+            <td><p>Import <i>ddu</i>-pictures from the file system.</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_export.svg"></td>
+            <td><p>Export current folder to the file system (assuming you have Android 5.0 Lollipop or higher).</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_add_folder.svg"></td>
+            <td><p>Import folder with <i>ddu</i>-pictures from the file system
+                (assuming you have Android 5.0 Lollipop or higher).</p></td>
+        </tr>
+        <tr>
+            <td><img src="icons/ic_delete.svg"></td>
+            <td><p>Delete content of current folder.</p></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><p>Show/hide folders.</p></td>
+        </tr>
+    </table>
+    <h3>Context menu</h3>
+    <div>
+        <p>Context menu appears on long tap on <i>ddu</i>-picture/folder.</p>
+        <h4>For <i>ddu</i>-picture</h4>
+        <p>You can rename, delete, restore original version, create copy or export.</p>
+        <h4>For folder</h4>
+        <p>You can delete or export (assuming you have Android 5.0 Lollipop or higher.</p>
+    </div>
+</div>
+<!-- TODO: help on circle editing -->
+<h2>General</h2>
+<div>
+    <p>
+        <i>Dodeca Meditation</i> is Android version of video art program <i>DodecaLook</i> for Windows.
+        If you found a bug or if you want to suggest some improvements ― go to
+        <i>Settings/Feedback and support</i> and email it to me.
+    </p>
+    <h3><i>ddu</i>-picture</h3>
+    <p>
+        <i>Dodeca Meditation</i> allows to view and modify <i>ddu</i>-pictures.
+        You can open a <i>ddu</i>-picture from <i>Dodeca Meditation</i> art collection via button on bottom bar.
+        If you already have a file of <i>ddu</i>-picture, locate it with file manager and choose to open with <i>Dodeca Meditation</i>.
+        <i>Dodeca Meditation</i> will import file of the <i>ddu</i>-picture to internal folder.
+        File of <i>ddu</i>-picture (with extension .ddu) contains initial state and development rules of the picture.
+    </p>
+    <h3>Motion</h3>
+    <p>
+        You can change position of <i>ddu</i>-picture by dragging it.<br>
+        You can zoom/scale <i>ddu</i>-picture with 2 fingers (pinch to zoom).<br>
+        Note, that if <i>Settings/Redraw trace</i> is on, motion and scaling clear canvas.
+    </p>
+</div>
+<!-- MAYBE: settings -->
+<!-- TODO: License & copyright -->
+</body>
 </html>
