--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -70,8 +70,8 @@
     <p>
         When you first open the <i>ddu</i>-collection you will see loading previews ―
         they are generating from existing files (<b>not</b> downloading from the internet).
-        You can change preview parameters from <i>Settings</i>. On subsequent opening of the collection only changed
-        <i>ddu</i>-pictures will be loading.
+        You can change preview parameters from <i>Settings</i>. Only changed
+        <i>ddu</i>-pictures will be loading on subsequent opening of the collection.
     </p>
     <h3>Top bar</h3>
     <table>
@@ -107,7 +107,7 @@
         <h4>For <i>ddu</i>-picture</h4>
         <p>You can rename, delete, restore original version, create copy or export.</p>
         <h4>For folder</h4>
-        <p>You can delete or export (assuming you have Android 5.0 Lollipop or higher.</p>
+        <p>You can delete or export (assuming you have Android 5.0 Lollipop or higher).</p>
     </div>
 </div>
 <!-- TODO: help on circle editing -->
