--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -28,11 +28,11 @@
         </tr>
         <tr>
             <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
-            <td><p>Очищает холст.</p></td>
+            <td><p>Очищает холст. Восстанавливает качество после приближения/удаления.</p></td>
         </tr>
         <tr>
             <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
-            <td><p>Автоцентровка</p></td>
+            <td><p>Автоцентровка. Перемещает к примерному центру <i>ddu</i>-картины.</p></td>
         </tr>
         <tr>
             <td><img src="icons/ic_help.svg" alt="help-button"></td>
