--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -28,11 +28,11 @@
         </tr>
         <tr>
             <td><img src="icons/ic_clear.svg" alt="clear-button"></td>
-            <td><p>Clear canvas.</p></td>
+            <td><p>Clear canvas. Note: restore quality after zoom.</p></td>
         </tr>
         <tr>
             <td><img src="icons/ic_autocenter.svg" alt="autocenter-button"></td>
-            <td><p>Autocenter</p></td>
+            <td><p>Autocenter. Move to approximate center of the <i>ddu</i>-picture.</p></td>
         </tr>
         <tr>
             <td><img src="icons/ic_help.svg" alt="help-button"></td>
