updated help: free for non-comm. use

--- a/app/src/main/assets/help/help-ru.html
+++ b/app/src/main/assets/help/help-ru.html
@@ -119,6 +119,7 @@
         <i>Додека Медитация</i> ― Android версия видеоарт-программы <i>DodecaLook</i> для Windows.
         Если вы обнаружили ошибку или у вас есть предложения по улучшению ― зайдите в
         <i>Настройки/Обратная связь и поддержка</i> и опишите это в письме.
+        Свободно для некоммерческого использования.
     </p>
     <h3><i>ddu</i>-картина</h3>
     <p>
