--- a/app/src/main/assets/help/help.html
+++ b/app/src/main/assets/help/help.html
@@ -117,6 +117,7 @@
         <i>Dodeca Meditation</i> is Android version of video art program <i>DodecaLook</i> for Windows.
         If you found a bug or if you want to suggest some improvements ― go to
         <i>Settings/Feedback and support</i> and email it to me.
+        Free for non-commercial use.
     </p>
     <h3><i>ddu</i>-picture</h3>
     <p>
